2013-04-06  Ryosuke Niwa  <rniwa@webkit.org>

        Rename sheriffbot to webkitbot
        https://bugs.webkit.org/show_bug.cgi?id=114109

        Reviewed by Benjamin Poulain.

        Renamed since sheriffbot will be used in Blink.

        * Scripts/webkitpy/tool/commands/sheriffbot.py:
        (SheriffBot):
        (SheriffBot.begin_work_queue):

2013-04-06  Oliver Hunt  <oliver@apple.com>

        Unify the many and varied stack trace mechanisms, and make the result sane.
        https://bugs.webkit.org/show_bug.cgi?id=114072

        Reviewed by Filip Pizlo.

        The commandline jsc executable no longer requires arguments, so
        I've made run-jsc work without them.

        * Scripts/run-jsc:

2013-04-06  Ed Bartosh  <bartosh@gmail.com>

        [EFL] build fails with error: 'UINT_MAX' was not declared in this scope
        https://bugs.webkit.org/show_bug.cgi?id=114086

        Reviewed by Tim Horton.

        * DumpRenderTree/AccessibilityUIElement.cpp: Included limits.h

2013-04-06  Zan Dobersek  <zdobersek@igalia.com>

        Remove remaining PLATFORM(CHROMIUM) guards in TestWebKitAPI, WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=114083

        Reviewed by Ryosuke Niwa.

        Remove the remaining three occurrences of the PLATFORM(CHROMIUM) build guards
        in TestWebKitAPI and WebKitTestRunner.

        * TestWebKitAPI/config.h:
        * TestWebKitAPI/mac/InjectedBundleControllerMac.mm:
        (TestWebKitAPI::InjectedBundleController::platformInitialize):
        * WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
        (WTR::InjectedBundle::platformInitialize):

2013-04-06  Geoffrey Garen  <ggaren@apple.com>

        Rolled out 147820 and 147818 because they caused plugins tests to ASSERT
        https://bugs.webkit.org/show_bug.cgi?id=114094

        Reviewed by Anders Carlsson.

        * Scripts/run-jsc:

2013-04-05  Ojan Vafai  <ojan@chromium.org>
